--- a/fundamentos/intro-html-css/dia02-intro-html-css/index.html
+++ b/fundamentos/intro-html-css/dia02-intro-html-css/index.html
@@ -6,15 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
     <style>
+
+        body {
+            font-size: 16px;
+        }
+
         h1 {
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
+
         }
         ul {
             background-color: cyan;
         }
         ._class {
             background-color: crimson;
+        }
+        p {
+            font-weight: 600;
+            font-size: 3em;
+            font-style: italic;
+            line-height: 100px;
+            text-align: center;
+            text-decoration:line-through;
         }
 
     </style>
