--- a/fundamentos/javascript/dia05/exemplos/exemplo.html
+++ b/fundamentos/javascript/dia05/exemplos/exemplo.html
@@ -7,6 +7,6 @@
       <h4 id="subtitle">Subtítulo</h4>
       <p id="second-paragraph" class="para">Segundo parágrafo!</p>
     </header>
-    <script src="/scripts.js"></script>
+    <script src="/exemplos/exemploScript.js"></script>
   </body>
 </html>
